--- a/src/main/resources/templates/admin/book-create.html
+++ b/src/main/resources/templates/admin/book-create.html
@@ -17,8 +17,6 @@
     <h2 class="mb-4">Create Book</h2>
 
     <form th:action="@{/admin/books}" th:object="${book}" method="post">
-
-
         <div class="mb-3">
             <label class="form-label">Title</label>
             <input type="text" class="form-control" th:field="*{title}">
@@ -69,12 +67,13 @@
 
         <div class="mt-4">
             <button type="submit" class="btn btn-primary">Save</button>
-            <a th:href="@{/admin/books}" class="btn btn-secondary ms-2">Cancel</a>
+            <a th:href="@{/admin/books}" class="btn btn-secondary ms-2" methods="get">Cancel</a>
         </div>
 
     </form>
     </div>
         </div>
 </div>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
