--- a/src/main/resources/templates/admin/books.html
+++ b/src/main/resources/templates/admin/books.html
@@ -14,7 +14,7 @@
 <header class="container-fluid bg-dark text-white py-3 mb-4 shadow-sm">
     <div class="container">
         <h2 class="mb-0">
-            <i class="bi bi-shield-lock me-2"></i>Admin Panel
+            <i class="bi bi-shield-lock me-2"></i>Admin Book Management Panel
         </h2>
     </div>
 </header>
@@ -47,7 +47,7 @@
         </select>
     </div>
 
-    <table class="table table-striped table-bordered">
+    <table class="table table-striped table-bordered shadow rounded-3">
         <thead class="table-dark">
         <tr>
             <th>ID</th>
@@ -71,7 +71,6 @@
                 </a>
             </td>
             <td>
-
                 <button type="button"
                         class="btn btn-outline-danger align-items-center"
                         data-bs-toggle="modal"
@@ -82,73 +81,77 @@
             </td>
         </tr>
         </tbody>
-
     </table>
-</div>
+    <div>
+        <a th:href="@{/admin/books/new}">
+            <button type="button" class="btn btn-outline-primary">Add New Book</button>
+        </a>
+        <a th:href="@{/admin/authors/new}">
+            <button type="button" class="btn btn-outline-success">Add New Author</button>
+        </a>
+    </div>
+    <hr>
 
 
-<hr>
-<div>
-    <a th:href="@{/admin/books/new}">
-        <button type="button" class="btn btn-outline-primary">Add New Book</button>
-    </a>
-</div>
+    <div class="d-flex justify-content-between align-items-center mt-4 container-fluid">
 
-<div class="d-flex justify-content-between align-items-center mt-4 container-fluid">
+        <div class="text-muted">
+            Page <span th:text="${currentPage + 1}"></span>
+            of <span th:text="${bookPage.totalPages}"></span>
+        </div>
 
-    <div class="text-muted">
-        Page <span th:text="${currentPage + 1}"></span>
-        of <span th:text="${bookPage.totalPages}"></span>
+        <nav>
+            <ul class="pagination mb-0">
+
+                <li class="page-item" th:classappend="${!bookPage.hasPrevious()} ? 'disabled'">
+                    <a class="page-link"
+                       th:href="@{/admin/books(page=${currentPage - 1}, size=${bookPage.size}, sortBy=${sortBy}, direction=${direction})}">
+                        Previous
+                    </a>
+                </li>
+
+                <li class="page-item"
+                    th:each="i : ${#numbers.sequence(0, bookPage.totalPages - 1)}"
+                    th:classappend="${i == currentPage} ? 'active'">
+                    <a class="page-link"
+                       th:text="${i + 1}"
+                       th:href="@{/admin/books(page=${i}, size=${bookPage.size}, sortBy=${sortBy}, direction=${direction})}">
+                    </a>
+                </li>
+
+                <li class="page-item" th:classappend="${!bookPage.hasNext()} ? 'disabled'">
+                    <a class="page-link"
+                       th:href="@{/admin/books(page=${currentPage + 1}, size=${bookPage.size}, sortBy=${sortBy}, direction=${direction})}">
+                        Next
+                    </a>
+                </li>
+
+            </ul>
+        </nav>
+
+        <form method="get" th:action="@{/admin/books}" class="d-flex align-items-center gap-2">
+            <label class="mb-0">Show</label>
+
+            <select class="form-select form-select-sm w-auto"
+                    name="size"
+                    onchange="this.form.submit()">
+                <option value="5" th:selected="${bookPage.size == 5}">5</option>
+                <option value="10" th:selected="${bookPage.size == 10}">10</option>
+                <option value="20" th:selected="${bookPage.size == 20}">20</option>
+            </select>
+
+            <input type="hidden" name="page" th:value="${currentPage}">
+            <input type="hidden" name="sortBy" th:value="${sortBy}">
+            <input type="hidden" name="direction" th:value="${direction}">
+        </form>
+
     </div>
 
-    <nav>
-        <ul class="pagination mb-0">
-
-            <li class="page-item" th:classappend="${!bookPage.hasPrevious()} ? 'disabled'">
-                <a class="page-link"
-                   th:href="@{/admin/books(page=${currentPage - 1}, size=${bookPage.size}, sortBy=${sortBy}, direction=${direction})}">
-                    Previous
-                </a>
-            </li>
-
-            <li class="page-item"
-                th:each="i : ${#numbers.sequence(0, bookPage.totalPages - 1)}"
-                th:classappend="${i == currentPage} ? 'active'">
-                <a class="page-link"
-                   th:text="${i + 1}"
-                   th:href="@{/admin/books(page=${i}, size=${bookPage.size}, sortBy=${sortBy}, direction=${direction})}">
-                </a>
-            </li>
-
-            <li class="page-item" th:classappend="${!bookPage.hasNext()} ? 'disabled'">
-                <a class="page-link"
-                   th:href="@{/admin/books(page=${currentPage + 1}, size=${bookPage.size}, sortBy=${sortBy}, direction=${direction})}">
-                    Next
-                </a>
-            </li>
-
-        </ul>
-    </nav>
-
-    <form method="get" th:action="@{/admin/books}" class="d-flex align-items-center gap-2">
-        <label class="mb-0">Show</label>
-
-        <select class="form-select form-select-sm w-auto"
-                name="size"
-                onchange="this.form.submit()">
-            <option value="5" th:selected="${bookPage.size == 5}">5</option>
-            <option value="10" th:selected="${bookPage.size == 10}">10</option>
-            <option value="20" th:selected="${bookPage.size == 20}">20</option>
-        </select>
-
-        <input type="hidden" name="page" th:value="${currentPage}">
-        <input type="hidden" name="sortBy" th:value="${sortBy}">
-        <input type="hidden" name="direction" th:value="${direction}">
-    </form>
-
+    <hr>
 </div>
 
-<hr>
+
+
 <li>
     <a th:href="@{/books}">Product List</a>
 </li>
@@ -174,6 +177,8 @@
         </div>
     </div>
 </div>
+
+<div th:replace="fragments/footer :: footer"></div>
 <script>
     const deleteModal = document.getElementById('deleteConfirmationModal');
 
