--- a/src/main/resources/templates/admin/authors.html
+++ b/src/main/resources/templates/admin/authors.html
@@ -11,13 +11,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-<header class="container-fluid bg-dark text-white py-3 mb-4 shadow-sm">
-  <div class="container">
-    <h2 class="mb-0">
-        <i class="bi bi-book-fill me-2"></i>Admin Author Management Panel
-    </h2>
-  </div>
-</header>
+<div th:replace="fragments/header :: adminHeader(
+        'Admin Author Management Panel',
+        'bi bi-book-fill',
+        'authors'
+)"></div>
 
 <div class="container mt-4">
     <div class="mb-3">
