--- a/src/main/resources/templates/admin/books.html
+++ b/src/main/resources/templates/admin/books.html
@@ -11,13 +11,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-<header class="container-fluid bg-dark text-white py-3 mb-4 shadow-sm">
-    <div class="container">
-        <h2 class="mb-0">
-            <i class="bi bi-shield-lock me-2"></i>Admin Book Management Panel
-        </h2>
-    </div>
-</header>
+<div th:replace="fragments/header :: adminHeader(
+        'Admin Book Management Panel',
+        'bi-shield-lock',
+        'books'
+)"></div>
 
 <div class="container mt-4">
     <div class="mb-3">
@@ -101,7 +99,7 @@
         </div>
 
         <nav>
-            <ul class="pagination mb-0">
+            <ul class="pagination mb-0" th:if="${bookPage.totalPages > 0}">
 
                 <li class="page-item" th:classappend="${!bookPage.hasPrevious()} ? 'disabled'">
                     <a class="page-link"
@@ -110,7 +108,7 @@
                     </a>
                 </li>
 
-                <li class="page-item"
+                <li class="page-item active"
                     th:each="i : ${#numbers.sequence(0, bookPage.totalPages - 1)}"
                     th:classappend="${i == currentPage} ? 'active'">
                     <a class="page-link"
