--- a/src/main/resources/templates/admin/authors.html
+++ b/src/main/resources/templates/admin/authors.html
@@ -58,7 +58,7 @@
 
 
 
-<!--<div th:insert="~{fragments/footer :: footer(year='2025', company='SlimShady Inc.')}">-->
+<div th:insert="~{fragments/footer :: footer(year='2025', company='SlimShady Inc.')}">
 
 </div>
 </body>
