Latest Code for the Book Store Mangement System

--- a/src/main/resources/templates/admin/books.html
+++ b/src/main/resources/templates/admin/books.html
@@ -60,7 +60,7 @@
         <tr th:each="b : ${bookPage.content}">
             <td th:text="${b.id}"></td>
             <td th:text="${b.title}"></td>
-            <td th:text="${b.author}"></td>
+            <td th:text="${b.author.firstName + ' ' + b.author.lastName}"></td>
             <td th:text="${b.stock}"></td>
             <td th:text="${b.price}"></td>
             <td>
