--- a/src/main/resources/templates/admin/authors.html
+++ b/src/main/resources/templates/admin/authors.html
@@ -36,10 +36,18 @@
                     <td th:text="${a.email}"></td>
                     <td th:text="${a.bio}"></td>
                     <td>
-                        <button type="button" class="btn btn-outline-success align-items-center"><i class="bi bi-pencil-square"></i></button>
+                        <a th:href="@{/admin/authors/edit/{id}(id=${a.id})}">
+                            <button type="button" class="btn btn-outline-success align-items-center"><i class="bi bi-pencil-square"></i></button>
+                        </a>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-outline-danger align-items-center"><i class="bi bi-trash"></i></button>
+                        <form th:action="@{/admin/authors/{id}/delete(id=${a.id})}" method="post"
+                        onsubmit="return confirm('Are you sure you want to delete this author?')">
+                            <button type="submit" class="btn btn-outline-danger align-items-center">
+                                <i class="bi bi-trash"></i>
+                            </button>
+                        </form>
+
                     </td>
                 </tr>
             </tbody>
@@ -56,10 +64,19 @@
     </div>
 </div>
 
-
-
 <div th:insert="~{fragments/footer :: footer(year='2025', company='SlimShady Inc.')}">
 
+<script>
+    const deleteModal = document.getElementById('deleteConfirmationModal');
+
+    deleteModal.addEventListener('show.bs.modal', function (event) {
+        const button = event.relatedTarget;
+        const bookId = button.getAttribute('data-book-id');
+
+        const form = deleteModal.querySelector('#confirmDeleteForm');
+        form.action = '/admin/authors/' + authorId + /delete ;
+    });
+</script>
 </div>
 </body>
 </html>
