--- a/src/main/resources/templates/admin/authors/author-edit.html
+++ b/src/main/resources/templates/admin/authors/author-edit.html
@@ -45,7 +45,7 @@
 
                         <div class="mb-3">
                             <label class="form-label fw-bold">Email</label>
-                            <input type="email" class="form-control" th:field="*{email}" placeholder="Enter email" />
+                            <input type="email" class="form-control" disabled th:field="*{email}" placeholder="Enter email" />
                             <div class="text-danger small" th:errors="*{email}"></div>
 
                         </div>
