--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -4,70 +4,88 @@
     <meta charset="UTF-8">
     <title>Edit Book</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+          th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+
+    <style>
+        .auth-card {
+            max-width:400px;
+            margin: 80px auto;
+        }
+        .switch-link {
+            cursor: pointer;
+            color: #0d6efd;
+        }
+    </style>
 </head>
+
 <body class="bg-light">
 
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
+<div class="card auth-card shadow-sm">
+    <div class="card-body">
+        <h3 class="mb-4 text-center">Welcome to
+            <br>Slim Shady BookStore 📚</h3>
+        <div id="loginForm">
+            <h4 class="mb-3 text-center">Login</h4>
 
-            <div class="card shadow-sm">
-                <div class="card-header bg-primary text-white">
-                    <h4 class="mb-0">Edit Book</h4>
+            <form method="post" action="/login">
+                <div class="mb-3">
+                    <label>Name</label>
+                    <input type="text" class="form-control" placeholder="Enter your name">
                 </div>
-                <div class="card-body">
-                    <form th:action="@{|/admin/books/${book.id}|}" th:object="${book}" method="post">
 
-                        <div class="mb-3">
-                            <label class="form-label">Book ID</label>
-                            <input type="text" class="form-control" th:value="${book.id}" disabled />
-                        </div>
-
-                        <div class="mb-3">
-                            <label class="form-label">Title</label>
-                            <input type="text" class="form-control" th:field="*{title}" required />
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label class="form-label">Author</label>
-                                <input type="text" class="form-control" th:field="*{author}" required />
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label class="form-label">ISBN</label>
-                                <input type="text" class="form-control" th:field="*{isbn}" />
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label class="form-label">Price</label>
-                                <input type="number" step="0.01" class="form-control" th:field="*{price}" required />
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label class="form-label">Stock</label>
-                                <input type="number" class="form-control" th:field="*{stock}" min="0" required />
-                            </div>
-                        </div>
-
-                        <div class="mb-3">
-                            <label class="form-label">Description</label>
-                            <textarea class="form-control" th:field="*{description}" rows="3"></textarea>
-                        </div>
-
-                        <div class="d-flex gap-2">
-                            <button type="submit" class="btn btn-success">Save Changes</button>
-                            <a th:href="@{/admin/books}" class="btn btn-secondary">Cancel</a>
-                        </div>
-
-                    </form>
+                <div class="mb-3">
+                    <label>Password</label>
+                    <input type="text" class="form-control" placeholder="Enter your password">
                 </div>
+
+                <button type="submit" class="btn btn-primary w-100">
+                    Login
+                </button>
+            </form>
+
+            <div class="text-center mt-3">
+                Not a member?
+                <span class="switch-link" onclick="showSignup()">Sign up<i class="bi bi-box-arrow-in-right"></i></span>
             </div>
+        </div>
 
+        <div id="signupForm" style="display:none;">
+            <h4 class="mb-3 text-center">Sign Up</h4>
+
+            <form method="post" action="/register">
+                <div class="mb-3">
+                    <label>Name</label>
+                    <input type="text" class="form-control" placeholder="Enter your name">
+                </div>
+                <div class="mb-3">
+                    <label>Password</label>
+                    <input type="text" class="form-control" placeholder="Enter your password">
+                </div>
+                <button type="submit" class="btn btn-success w-100">
+                    Sign Up
+                </button>
+            </form>
+
+            <div class="text-center mt-3">
+                Already a member?
+                <span class="switch-link" onclick="showLogin()">Login <i class="bi bi-door-open"></i></span>
+            </div>
         </div>
     </div>
 </div>
 
+<script>
+    function showSignup() {
+        document.getElementById("loginForm").style.display = "none";
+        document.getElementById("signupForm").style.display = "block";
+    }
+
+    function showLogin() {
+        document.getElementById("signupForm").style.display = "none";
+        document.getElementById("loginForm").style.display = "block";
+    }
+</script>
+<script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
