Enhance security and bug fixes

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,6 +28,9 @@
             title="Manage Authors">
             <i class="bi bi-person-lines-fill"></i>
         </a>
+        <a th:href="@{/login}" class="btn btn-outline-light">
+            <i class="bi bi-box-arrow-right"></i>
+        </a>
     </div>
 
 </header>
