--- a/src/main/resources/templates/admin/authors.html
+++ b/src/main/resources/templates/admin/authors.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Authors</title>
@@ -13,11 +13,11 @@
 
 <body>
 
-<div th:replace="fragments/header :: adminHeader(
+<div th:replace="~{fragments/header :: adminHeader(
         'Admin Author Management Panel',
         'bi bi-book-fill',
         'authors'
-)"></div>
+)}"></div>
 
 <div class="container mt-4">
 
@@ -54,10 +54,12 @@
                 </a>
             </td>
 
-            <td class="text-center">
-                <button type="button"
+            <td sec:authorize="hasRole('ADMIN')">
+                <button type="hidden"
                         class="btn btn-outline-danger"
                         data-bs-toggle="modal"
+                        th:name="${_csrf.parameterName}"
+                        th:value="${_csrf.token}"
                         th:title="${!#lists.isEmpty(a.books)} ? 'Author still has books' : 'Delete author'"
                         data-bs-target="#deleteConfirmationModal"
                         th:attr="data-author-id=${a.id}">
