--- a/src/main/resources/templates/admin/books.html
+++ b/src/main/resources/templates/admin/books.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -19,6 +19,9 @@
 
 <div class="container mt-4">
     <div class="mb-3">
+        <div th:if="${error}" class="alert alert-danger text-center">
+            <span th:text="${error}"></span>
+        </div>
         <label for="sortSelect" class="form-label">Sort By:</label>
         <select id="sortSelect" class="form-select"
             onchange="window.location.href=this.value">
@@ -68,11 +71,15 @@
                     <button type="button" class="btn btn-outline-success align-items-center"><i class="bi bi-pencil-square"></i></button>
                 </a>
             </td>
-            <td>
-                <button type="button"
+<!--            delete button-->
+            <td sec:authorize="hasRole('ADMIN')">
+                <button
                         class="btn btn-outline-danger align-items-center"
                         data-bs-toggle="modal"
                         data-bs-target="#deleteConfirmationModal"
+                        type="hidden"
+                        th:name="${_csrf.parameterName}"
+                        th:value="${_csrf.token}"
                         th:attr="data-book-id=${b.id}">
                         <i class="bi bi-trash"></i>
                 </button>
@@ -86,7 +93,7 @@
         </a>
     </div>
     <hr>
-
+<!--pagination nav-->
     <div class="d-flex justify-content-between align-items-center mt-4 container-fluid">
 
         <div class="text-muted">
@@ -145,7 +152,7 @@
     <hr>
 </div>
 
-<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+<div class="modal fade"  id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -156,7 +163,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <form id="confirmDeleteForm" method="post" action="">
+                <form id="confirmDeleteForm" method="post">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
             </div>
@@ -164,7 +172,7 @@
     </div>
 </div>
 
-<div th:replace="fragments/footer :: footer"></div>
+<div th:insert="~{fragments/footer :: footer}"></div>
 <script>
     const deleteModal = document.getElementById('deleteConfirmationModal');
 
