My old commit from home computer

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
 <body>
 
 <header th:fragment="adminHeader(title, icon, activePage)"
-        class="navbar navbar-expand-lg container-fluid bg-dark text-white py-3 mb-4 shadow-sm">
+        class="navbar navbar-expand-lg container bg-dark text-white py-3 mb-4 shadow-sm">
     <div class="container">
         <h2 class="mb-0">
             <i class="bi me-2"
