--- a/src/main/resources/templates/admin/author-create.html
+++ b/src/main/resources/templates/admin/author-create.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Author</title>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet">
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.8/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container mt-5">
