--- a/src/main/resources/templates/admin/authors.html
+++ b/src/main/resources/templates/admin/authors.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <title>Authors</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          rel="stylesheet">
-
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.8/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -41,7 +38,7 @@
         </thead>
 
         <tbody>
-        <tr th:each="a : ${authorPage.content}">
+        <tr th:each="a : ${authors}">
             <td th:text="${a.firstName}"></td>
             <td th:text="${a.lastName}"></td>
             <td th:text="${a.email}"></td>
@@ -60,7 +57,7 @@
                         data-bs-toggle="modal"
                         th:name="${_csrf.parameterName}"
                         th:value="${_csrf.token}"
-                        th:title="${!#lists.isEmpty(a.books)} ? 'Author still has books' : 'Delete author'"
+                        th:title="${!#lists.isEmpty(a)} ? 'Author still has books' : 'Delete author'"
                         data-bs-target="#deleteConfirmationModal"
                         th:attr="data-author-id=${a.id}">
                     <i class="bi bi-trash"></i>
