--- a/src/main/resources/templates/admin/authors/author-edit.html
+++ b/src/main/resources/templates/admin/authors/author-edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Author Edit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.8/css/bootstrap.min.css">
 
 </head>
 <!--id, firstname, lastname, email, bio, books-->
