--- a/src/main/resources/templates/admin/books.html
+++ b/src/main/resources/templates/admin/books.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-...yourhash..."
-            crossorigin="anonymous">
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.8/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-<div th:replace="fragments/header :: adminHeader(
+<div th:replace="~{fragments/header :: adminHeader(
         'Admin Book Management Panel',
         'bi-shield-lock',
         'books'
-)"></div>
+)}"></div>
 
 <div class="container mt-4">
     <div class="mb-3">
