--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -3,8 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.8/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+<div th:insert="~{fragments/header :: adminHeader(
+'Admin User Management Panel',
+'bi bi-people',
+'users')}">
+    </div>
+
+    <div class="container mt-4">
+        <table class="table table-striped table-bordered shadow rounded-2">
+            <thead class="table-dark">
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Role</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="u : ${users}">
+                <td th:text="${u.id}">1</td>
+                <td th:text="${u.username}">admin</td>
+                <td th:text="${u.role}">ADMIN</td>
+                <td>
+                    <form th:action="@{/users/{id}/delete(id=${u.id})}" method="post" onsubmit="return confirm('Are you sure you want to delete this user?');">
+                        <button type="submit" class="btn btn-sm btn-danger">
+                            <i class="bi bi-trash"></i> Delete
+                        </button>
+                    </form>
+                </td>
+            </tr>
+            <tr th:if="${#lists.isEmpty(users)}">
+                No users found.
+            </tr>
+            </tbody>
+        </table>
+        <div>
+            <a th:href="@{/users/new}">
+                <button type="button" class="btn btn-outline-success">Create New User</button>
+            </a>
+        </div>
+    </div>
+
+
 
 </body>
 </html>
