--- a/src/main/resources/templates/admin/users/user-create.html
+++ b/src/main/resources/templates/admin/users/user-create.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create User</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.8/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container mt-5">
@@ -10,7 +11,7 @@
             <div class="col-md-6">
                 <h2 class="mb-4">Create User</h2>
 
-                <form th:action="@{/admin/users}" th:object="${user}" method="post">
+                <form th:action="@{/templates/admin/users}" th:object="${user}" method="post">
                     <div class="mb-3">
                         <label class="form-label">Username</label>
                         <input type="text" class="form-control" th:field="*{username}">
