--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-...yourhash..."
-        crossorigin="anonymous">
+<link rel="stylesheet" href="/webjars/bootstrap/5.3.8/css/bootstrap.min.css">
 <body>
 
 <header th:fragment="adminHeader(title, icon, activePage)"
@@ -17,6 +13,9 @@
         </h2>
     </div>
     <div class="d-flex gap-3">
+        <a th:href="@{/users}" class="btn btn-outline-light">
+            <i class="bi bi-people"></i>
+        </a>
         <a th:if="${activePage != 'books'}"
                 th:href="@{/admin/books}"
            class="btn btn-outline-light"
