--- a/src/main/resources/templates/intro/register.html
+++ b/src/main/resources/templates/intro/register.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet"
-          th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.8/css/bootstrap.min.css">
 </head>
 <body>
 
