latest update after meeting note acutually before new year

--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -36,6 +36,7 @@
                     </form>
                 </td>
             </tr>
+            <p th:text="${users}"></p>
             <tr th:if="${#lists.isEmpty(users)}">
                 No users found.
             </tr>
