--- a/src/main/resources/templates/admin/books/book-edit.html
+++ b/src/main/resources/templates/admin/books/book-edit.html
@@ -35,12 +35,12 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label class="form-label">Author</label>
-                            <select class="form-select" th:field="*{author.id}">
+                            <select class="form-select" th:field="*{authorId}">
                                 <option th:each="author : ${authors}" th:value="${author.id}" th:text="${author.firstName}"></option>
                             </select>
                                 <div class="text-danger small"
-                                     th:if="${#fields.hasErrors('author')}"
-                                     th:errors="*{author}">
+                                     th:if="${#fields.hasErrors('authorId')}"
+                                     th:errors="*{authorId}">
                                 </div>
                             </div>
                             <div class="col-md-6 mb-3">
