--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -30,7 +30,7 @@
                 <td th:text="${u.role}">ADMIN</td>
                 <td>
                     <form th:action="@{/users/{id}/delete(id=${u.id})}" method="post" onsubmit="return confirm('Are you sure you want to delete this user?');">
-                        <button type="submit" class="btn btn-sm btn-danger">
+                        <button type="submit" class="btn btn-outline-danger">
                             <i class="bi bi-trash"></i> Delete
                         </button>
                     </form>
@@ -48,8 +48,6 @@
             </a>
         </div>
     </div>
-
-
 
 </body>
 </html>
